tests/parser/var_err16.mtp
(* variable section start *)

(*missing colon*)
var test array (20) of integer;

begin

end
.
